force-app/main/default/objects/Case/fields/Auto_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Closure_Date__c</fullName>
    <label>Auto Closure Date</label>
    <type>DateTime</type>
</CustomField>