force-app/main/default/objects/Case/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <formula>Account.CSM__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM</label>
    <type>Text</type>
</CustomField>