force-app/main/default/objects/Case/fields/Delinquency_follow_up_date__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_follow_up_date__c</fullName>
    <label>Save Team follow-up date</label>
    <type>Date</type>
</CustomField>