force-app/main/default/objects/Case/fields/Delinquency_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Resolved_Date__c</fullName>
    <description>Workflow that stamps when return / delinquency status is updated</description>
    <label>Churn Status Updated Date</label>
    <type>Date</type>
</CustomField>