force-app/main/default/objects/Case/fields/Delinquency_Status__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Status__c</fullName>
    <label>Return / Delinquency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attempting</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Pending Resolution</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Resolved - Pending Payment</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Not Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>