force-app/main/default/objects/Case/fields/Delinquency_Subreason__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Subreason__c</fullName>
    <label>Return / Delinquency Subreason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delinquency_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Change in decision maker/ownership</fullName>
            </value>
            <value>
                <fullName>Contract length</fullName>
            </value>
            <value>
                <fullName>COVID-19 Impact</fullName>
            </value>
            <value>
                <fullName>Customer no longer likes pricing</fullName>
            </value>
            <value>
                <fullName>Customer treated 30 day period as a trial</fullName>
            </value>
            <value>
                <fullName>Customer wanted features that do not exist yet</fullName>
            </value>
            <value>
                <fullName>Customer was unsatisfied with onboarding process</fullName>
            </value>
            <value>
                <fullName>Customer was unsatisfied with response time</fullName>
            </value>
            <value>
                <fullName>Customer was unsatisfied with warranty terms</fullName>
            </value>
            <value>
                <fullName>Customer went with another vendor</fullName>
            </value>
            <value>
                <fullName>Downsizing / Partial Return</fullName>
            </value>
            <value>
                <fullName>Early Termination of Full Contract</fullName>
            </value>
            <value>
                <fullName>Exchanging product / not a real return</fullName>
            </value>
            <value>
                <fullName>Hardware failed in some manner</fullName>
            </value>
            <value>
                <fullName>Installation complexity</fullName>
            </value>
            <value>
                <fullName>Lack of financing / denied financing</fullName>
            </value>
            <value>
                <fullName>Other (Please explain in notes)</fullName>
            </value>
            <value>
                <fullName>Product did not meet customer&apos;s expectations</fullName>
            </value>
            <value>
                <fullName>Product is incompatiable with company&apos;s fleet</fullName>
            </value>
            <value>
                <fullName>Sales Rep misrepresented the product</fullName>
            </value>
            <value>
                <fullName>Software underperformed.</fullName>
            </value>
            <value>
                <fullName>Unable to cancel previous contract with another vendor</fullName>
            </value>
            <value>
                <fullName>Customer Reached, Became Unresponsive</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Credit Card Requires Update</fullName>
                <label>Credit card requires update</label>
            </value>
            <value>
                <fullName>Contesting payment</fullName>
            </value>
            <value>
                <fullName>Retry Original Payment Method</fullName>
            </value>
            <value>
                <fullName>Contract Terms Dispute</fullName>
            </value>
            <value>
                <fullName>Customer requested reprocessing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>