force-app/main/default/objects/Case/fields/Escalated_Case__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated Case</label>
    <type>Checkbox</type>
</CustomField>