force-app/main/default/objects/Case/fields/Evidence_for_Move__c.field-meta.xml
<CustomField>
    <fullName>Evidence_for_Move__c</fullName>
    <label>Evidence for Move</label>
    <length>80</length>
    <type>Text</type>
</CustomField>