force-app/main/default/objects/Case/fields/High_Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>High_Churn_Risk__c</fullName>
    <formula>Account.High_Churn_Risk__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Churn Risk</label>
    <type>Checkbox</type>
</CustomField>