force-app/main/default/objects/Case/fields/HoursToLastResponse__c.field-meta.xml
<CustomField>
    <fullName>HoursToLastResponse__c</fullName>
    <formula>(Last_Customer_Outreach__c - CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HoursToLastResponse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>