force-app/main/default/objects/Case/fields/Lifetime_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Purchases__c</fullName>
    <formula>Account.Lifetime_Purchases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Purchases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>