force-app/main/default/objects/Case/fields/Number_of_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Interactions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>