force-app/main/default/objects/Case/fields/Rationale_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Rationale_for_Request__c</fullName>
    <label>Rationale for Request</label>
    <length>80</length>
    <type>Text</type>
</CustomField>