force-app/main/default/objects/Case/fields/Related_Issue_Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue_Account_Count__c</fullName>
    <formula>Related_Issue__r.Account_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Issue Account Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>