force-app/main/default/objects/Case/fields/Related_Issue_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue_Fixed__c</fullName>
    <label>Related Issue Fixed</label>
    <length>18</length>
    <type>Text</type>
</CustomField>