force-app/main/default/objects/Case/fields/Replacement__c.field-meta.xml
<CustomField>
    <fullName>Replacement__c</fullName>
    <inlineHelpText>Product Code ( eg LIC-VG-ENT)</inlineHelpText>
    <label>Replacement</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>