force-app/main/default/objects/Case/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <description>GTMS - 817</description>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Finance Partner</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Payment Delay</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Suspension- Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>