force-app/main/default/objects/Case/fields/Return_Oppty_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Return_Oppty_Owner_Email__c</fullName>
    <label>Return Oppty Owner Email</label>
    <type>Email</type>
</CustomField>