force-app/main/default/objects/Case/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>