force-app/main/default/objects/Case/fields/Status_Customer_Visible__c.field-meta.xml
<CustomField>
    <fullName>Status_Customer_Visible__c</fullName>
    <formula>case(Status,&apos;Closed&apos;,&apos;Closed&apos;,&apos;Pending-Engineering Fix&apos;,&apos;Open&apos;,&apos;Open&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status-Customer Visible</label>
    <type>Text</type>
</CustomField>