force-app/main/default/objects/Case/fields/Support_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Support_Escalation__c</fullName>
    <formula>Account.Support_Escalation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Escalation</label>
    <type>Checkbox</type>
</CustomField>