force-app/main/default/objects/Case/fields/Support_Escalation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Support_Escalation_Owner__c</fullName>
    <formula>Account.Support_Escalation_Owner__r.FirstName + &apos; &apos;+ Account.Support_Escalation_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Escalation Owner</label>
    <type>Text</type>
</CustomField>