force-app/main/default/objects/Case/fields/Suspension_Date__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Date__c</fullName>
    <description>GTMS - 817</description>
    <label>Suspension Date</label>
    <type>Date</type>
</CustomField>