force-app/main/default/objects/Case/fields/Total_Purchased_CM_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchased_CM_Count__c</fullName>
    <formula>if(Account.Total_Purchased_CM_Count__c != null, Account.Total_Purchased_CM_Count__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Purchased CM Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>