force-app/main/default/objects/Case/recordTypes/CS_Request_Log.recordType-meta.xml
<RecordType>
    <fullName>CS_Request_Log</fullName>
    <active>true</active>
    <businessProcess>Support-Zendesk</businessProcess>
    <label>CS Request Log</label>
</RecordType>