force-app/main/default/objects/Case/recordTypes/Partner_Support.recordType-meta.xml
<RecordType>
    <fullName>Partner_Support</fullName>
    <active>true</active>
    <businessProcess>Partner Support Process</businessProcess>
    <description>Record type used for cases created by partners from the partner portal</description>
    <label>Partner Support</label>
</RecordType>