force-app/main/default/objects/Case/recordTypes/Payment_Concession.recordType-meta.xml
<RecordType>
    <fullName>Payment_Concession</fullName>
    <active>true</active>
    <businessProcess>Support-Zendesk</businessProcess>
    <label>Payment Concession</label>
</RecordType>