force-app/main/default/objects/Case/recordTypes/Unworkable_Case.recordType-meta.xml
<RecordType>
    <fullName>Unworkable_Case</fullName>
    <active>true</active>
    <businessProcess>Unworkable case</businessProcess>
    <label>Unworkable Case</label>
</RecordType>