force-app/main/default/objects/Case/recordTypes/zendesk_ticket_sync.recordType-meta.xml
<RecordType>
    <fullName>zendesk_ticket_sync</fullName>
    <active>true</active>
    <businessProcess>Support-Zendesk</businessProcess>
    <label>Zendesk Ticket Sync</label>
</RecordType>