force-app/main/default/objects/Case/validationRules/Account_is_SFDC_Pool.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_is_SFDC_Pool</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  Account.Lifetime_Purchases__c == 0,  Account.Total_Pipeline__c == 0,  Account.Id != Null, Account.Name != &apos;Samsara&apos;, Account.Name != &apos;None&apos;)</errorConditionFormula>
    <errorMessage>The Account you added is not a customer! Please add the correct account before proceeding.</errorMessage>
</ValidationRule>