force-app/main/default/objects/Case/validationRules/Account_Name_needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_needed</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Account.Name == null, !ISPICKVAL( Status, &apos;New&apos;),  Owner:Queue.QueueName != &apos;Express Returns&apos;,Owner:Queue.QueueName != &apos;Missed Call Queue&apos;, Owner:Queue.QueueName != &apos;IT related Queue&apos;,Owner:Queue.QueueName != &apos;Facilities Queue&apos;,
Owner:Queue.QueueName != &apos;Feedback Queue&apos;, Owner:Queue.QueueName != &apos;DriverApp Feedback&apos;  )</errorConditionFormula>
    <errorMessage>Please add the name of the Account before proceeding to the next case stage. Status cannot be anything other than &apos;New&apos; unless you enter the Account Name.</errorMessage>
</ValidationRule>