force-app/main/default/objects/Case/validationRules/Contact_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Needed</fullName>
    <active>true</active>
    <description>Please add the name of the contact/ create one when case status is anything other than &quot;New&quot;</description>
    <errorConditionFormula>AND( ContactId == null, ISPICKVAL( Status, &apos;Pending-Customer&apos;), Owner:Queue.QueueName != &apos;Express Returns&apos;,Owner:Queue.QueueName != &apos;Missed Call Queue&apos;,RecordType.DeveloperName!=&apos;zendesk_ticket_sync&apos;)</errorConditionFormula>
    <errorMessage>Please add a Contact before proceeding to Pending-Customer status</errorMessage>
</ValidationRule>