force-app/main/default/objects/Case/validationRules/Finance_Case_Result_Close_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Finance_Case_Result_Close_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name != &apos;Zendesk Ticket Sync&apos;,
    ISBLANK(TEXT(Finance_Case_Result__c)), 
    TEXT(Status) = &apos;Closed&apos;
)</errorConditionFormula>
    <errorMessage>Please enter a Finance Case Result in order to Close this case.</errorMessage>
</ValidationRule>