force-app/main/default/objects/Case/validationRules/Move_the_case_to_New_Case_Queue.validationRule-meta.xml
<ValidationRule>
    <fullName>Move_the_case_to_New_Case_Queue</fullName>
    <active>false</active>
    <errorConditionFormula>CONTAINS( Owner:User.Profile.Name , &apos;Sales&apos;)</errorConditionFormula>
    <errorMessage>Please move the case owner to &quot;NEW CASE QUEUE&quot; if you want Support team to handle it.</errorMessage>
</ValidationRule>