force-app/main/default/objects/Case/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.CS_Request_Log</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Pre-sale support,Escalation support,Ongoing training,Upgrade CS Tier - Services,Upgrade CS Tier  - Customer Success</value>
    </filters>
    <filters>
        <field>CS_Tier__c</field>
        <operation>notContain</operation>
        <value>Starter</value>
    </filters>
    <label>All</label>
</ListView>