force-app/main/default/objects/Case/listViews/Cases_awaiting_fix.listView-meta.xml
<ListView>
    <fullName>Cases_awaiting_fix</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Case_Account_Priority__c</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pending-Engineering Fix</value>
    </filters>
    <label>All Pending-Engineering Fix</label>
</ListView>