force-app/main/default/objects/Case/listViews/Cases_Pending_Samsara.listView-meta.xml
<ListView>
    <fullName>Cases_Pending_Samsara</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Account_Priority__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pending-Samsara</value>
    </filters>
    <label>All Pending-Samsara</label>
</ListView>