force-app/main/default/objects/Case/listViews/Customer_Experience.listView-meta.xml
<ListView>
    <fullName>Customer_Experience</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>NPS,CSAT</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Low</value>
    </filters>
    <label>All Customer Experience</label>
</ListView>