force-app/main/default/objects/Case/listViews/Customer_Referral_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Referral_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Referral</label>
    <queue>Customer_Referral</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>