force-app/main/default/objects/Case/listViews/Customer_Returns_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Returns_Case</fullName>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Returns</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Customer Returns</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>