force-app/main/default/objects/Case/listViews/Escalations.listView-meta.xml
<ListView>
    <fullName>Escalations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Support_Escalation__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Escalations</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Escalations</label>
</ListView>