force-app/main/default/objects/Case/listViews/Feedback_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Feedback_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Account_Priority__c</columns>
    <columns>dashboardUrl__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>notEqual</operation>
        <value>NPS,CSAT</value>
    </filters>
    <label>All Feedbacks Queue</label>
    <queue>Feedback_Queue</queue>
</ListView>