force-app/main/default/objects/Case/listViews/My_Cases_Pending_Customer.listView-meta.xml
<ListView>
    <fullName>My_Cases_Pending_Customer</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Age_Since_Contact__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pending-Customer</value>
    </filters>
    <label>*** 4. My Pending-Customer***</label>
</ListView>