force-app/main/default/objects/Case/listViews/My_Round_Robined_Cases.listView-meta.xml
<ListView>
    <fullName>My_Round_Robined_Cases</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>Touched__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.ORIGIN</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Round_Robined__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Touched__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>*** 2. My Round Robined Cases***</label>
</ListView>